# netqasm

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  external_test_requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
.github/workflows/: actions.yaml  publish.yaml  publish.yml  simulaqron.yaml  squidasm.yaml
docs/: Makefile  README.md  api.rst  api_root.rst  conf.py  index.rst  installation.rst  known_issues.rst  netqasm.backend.rst  netqasm.examples.rst  netqasm.lang.rst  netqasm.logging.rst  netqasm.runtime.rst  netqasm.sdk.rst  netqasm.util.rst  quickstart.rst  requirements.txt  sdk.rst  usage.rst
docs/api/: modules.rst  netqasm.backend.rst  netqasm.examples.apps.anonymous_transmission.rst  netqasm.examples.apps.anonymous_transmission.src.rst  netqasm.examples.apps.bb84.rst  netqasm.examples.apps.blind_grover.rst  netqasm.examples.apps.blind_rotation.rst  netqasm.examples.apps.chsh.rst  netqasm.examples.apps.dist_cnot.rst  netqasm.examples.apps.magic_square.rst  netqasm.examples.apps.multiple_files.rst  netqasm.examples.apps.multiple_files.shared.rst  netqasm.examples.apps.rst  netqasm.examples.apps.single_node.rst  netqasm.examples.apps.teleport.rst  netqasm.examples.apps.three_nodes.rst  netqasm.examples.lib.rst  netqasm.examples.rst  netqasm.examples.sdk_examples.rst  netqasm.lang.instr.rst  netqasm.lang.parsing.rst  netqasm.lang.rst  netqasm.logging.rst  netqasm.rst  netqasm.runtime.interface.rst  netqasm.runtime.rst  netqasm.sdk.classical_communication.rst  netqasm.sdk.classical_communication.thread_socket.rst  netqasm.sdk.rst  netqasm.sdk.toolbox.rst  netqasm.util.rst
examples/: example.py  run_examples.py
netqasm/: __init__.py  assembler.py  cli.py  compiling.py  encoder.py  encoding.py  errors.py  executioner.py  instructions.py  io_util.py  log_util.py  logging.py  messages.py  network_stack.py  output.py  parser.py  processor.py  qlink_compat.py  qnodeos.py  quantum_gates.py  settings.py  states_util.py  string_util.py  subroutine.py  typedefs.py  typing.py  util.py  yaml_util.py
paper/: README.md
tests/: test_builder.py  test_cli.py  test_compiling.py  test_encoding.py  test_executioner.py  test_executor.py  test_instructions.py  test_parser.html  test_parser.py  test_processor.py  test_serde.py  test_states_util.py  test_string_util.py  test_subroutine.py  test_transpiling.py
(+471 files in other folders)
