[metadata]
name = netqasm
version = 0.8.5
author = Axel Dahlberg, Bart van der Vecht
author-email = b.vandervecht@tudelft.nl
description = Tool for parsing, encoding, decoding and executing NetQASM applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
home-page = https://github.com/QuTech-Delft/netqasm
url = https://github.com/QuTech-Delft/netqasm
python_requires = >=3.7

[options.entry_points]
console_scripts = 
    netqasm = netqasm.runtime.cli:cli