[metadata]
name = netqasm
author = QuTech
author_email = b.vandervecht@tudelft.nl
description = Tool for parsing, encoding, decoding and executing NetQASM applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
home_page = https://github.com/QuTech-Delft/netqasm
url = https://github.com/QuTech-Delft/netqasm
python_requires = >=3.7

[options]
install_requires = 
    click >=8.0, <9.0
    qlink-interface >=1.0, <2.0
    numpy >=1.22
    scipy >=1.11.1
    pyyaml >=6.0, <7.0

[options.extras_require]
dev =
    pytest >=7.1, <8.0
    types-PyYAML >=6.0, <7.0
    flake8 >=4.0, <5.0
    isort >=5.10, <5.11
    black >=22.3, <22.4
    mypy >=0.950
squidasm = 
    squidasm >=0.10  # requires extra pip arguments to install, see README

[options.entry_points]
console_scripts = 
    netqasm = netqasm.runtime.cli:cli

